apps/pihole/pihole.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  annotations:
    metallb.io/loadBalancerIPs: 192.168.30.191
spec:
  type: LoadBalancer
  ports:
  - port: 53
    protocol: UDP
    name: dns-udp
  - port: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app: pihole
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
          name: http
        - containerPort: 53
          protocol: UDP
          name: dns-udp
